--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.1.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1",
     "onchange": "^3.3.0",
     "parallelshell": "^3.0.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
